--- a/app/view/main.htm
+++ b/app/view/main.htm
@@ -1,1 +1,34 @@
-<h1>Hello World!</h1>
+<section id="main-section">
+
+  <section class="top-menu">
+
+  </section>
+
+  <section class="page">
+    <header>
+      <h1 translate>main.header</h1>
+      <h3 translate>main.subheader</h3>
+    </header>
+    
+    <div id="action-chooser">
+    
+      <div class="choose-btn">
+        <span class="fa-stack fa-5x icon">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-file-text fa-stack-1x fa-inverse"></i>
+        </span>
+        <span translate>main.create</span>
+      </div>
+    
+      <div class="choose-btn">
+        <span class="fa-stack fa-5x icon">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-folder fa-stack-1x fa-inverse"></i>
+        </span>
+        <span translate>main.modify</span>
+      </div>
+    
+    </div>
+  </section>
+
+</section>
