File dialogs conception realization
The realization is based on the node-webkit's philosophy of handling file inputs. It
will not work in other browsers, I suppose. But we have a concrete environment here and
it's cool.

--- a/app/view/main.htm
+++ b/app/view/main.htm
@@ -12,7 +12,7 @@
     
     <div id="action-chooser">
     
-      <div class="choose-btn">
+      <div class="choose-btn" ng-click="create()">
         <span class="fa-stack fa-5x icon">
           <i class="fa fa-circle fa-stack-2x"></i>
           <i class="fa fa-file-text fa-stack-1x fa-inverse"></i>
