Decouple fileDialog to a separate library

--- a/app/view/main.htm
+++ b/app/view/main.htm
@@ -20,7 +20,7 @@
         <span translate>main.create</span>
       </div>
     
-      <div class="choose-btn">
+      <div class="choose-btn" ng-click="open()">
         <span class="fa-stack fa-5x icon">
           <i class="fa fa-circle fa-stack-2x"></i>
           <i class="fa fa-folder fa-stack-1x fa-inverse"></i>
